Patch downstream/qtbase/src/corelib/mimetypes/qmimeprovider.cpp

Fixes clang 15 and 16 static assertion failures in ~unique_ptr<T>() due to T
being an incomplete type.

Fix by making the definition of QMimeBinaryProvider::CacheFile precede the
definition of QMimeBinaryProvider::QMimeBinaryProvider() because the
unique_ptr<QMimeBinaryProvider::CacheFile> QMimeBinaryProvider::m_cacheFile
will be instantiated at this point and thus also
~unique_ptr<QMimeBinaryProvider::CacheFile>() which needs the definition of
QMimeBinaryProvider::CacheFile::~CacheFile() to be visible.

~unique_ptr() became constexpr in C++23 and thus "gets instantiated more
eagerly -- at the point of first reference rather than at end of
TU" (https://github.com/llvm/llvm-project/issues/74963#issuecomment-1850834221).

Reported upstream: https://bugreports.qt.io/browse/QTBUG-121204